# petiquette-api

./: Makefile  README.md  README.rst  pytest.ini  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
petiquette/: __init__.py  __main__.py  api.py
petiquette/resources/: __init__.py  animal.py  pet.py  training.py
requirements/: dev.in  lock.txt  runtime.in  static.in
src/petiquette/: __init__.py  __main__.py  api.py  context.py  models.py
src/petiquette/resources/: animal.py  training.py
