[wheel]
universal = 1

[metadata]
name = petiquette
version = 0.1.0
description = API for Petiquette
long_description = file: README.rst
url = https://github.com/defrank/petiquette-api
author = Derek M Frank
author_email = derek@frank.sh
classifiers =
    Framework :: Hug
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[aliases]
test = tox
tests = tox

[options]
include_package_data = True
python_requires = >= 3.8.0
package_dir =
    =src
packages = find:
setup_requires =
    pip
[options.packages.find]
where = src
exclude =
    tests
    docs

[options.entry_points]
console_scripts =
    petiquette = petiquette.__main__:cli
